      (Andrew Bennetts, Robert Collins, #178353)

  IMPROVEMENTS:

    * Fetching between different repository formats with compatible models now
      takes advantage of the smart method to stream revisions.  (Andrew Bennetts)

    * The ``--coverage`` option is now global, rather specific to ``bzr
      selftest``.  (Andrew Bennetts)

  BUGFIXES:

    * Calculate remote path relative to the shared medium in _SmartClient.  This
      is related to the problem in bug #124089.  (Andrew Bennetts)

    * Cleanly handle connection errors in smart protocol version two, the same
      way as they are handled by version one.  (Andrew Bennetts)
      
    * ``reconfigure`` can safely be interrupted while fetching.
      (Aaron Bentley, #179316)

    * ``reconfigure`` preserves tags when converting to and from lightweight
      checkouts.  (Aaron Bentley, #182040)

    * Unknown hostnames when connecting to a ``bzr://`` URL no longer cause
      tracebacks.  (Andrew Bennetts, #182849)

  API BREAKS:

    * Classes implementing Merge types like Merge3Merger must now accept (and
      honour) a do_merge flag in their constructor.  (Aaron Bentley)

  TESTING:

   * selftest now accepts --load-list <file> to load a test id list. This
     speeds up running the test suite on a limited set of tests.
     (Vincent Ladeuil)

  INTERNALS:

    * Add a new method ``get_result`` to graph search objects. The resulting
      ``SearchResult`` can be used to recreate the search later, which will
      be useful in reducing network traffic. (Robert Collins)

    * Fetching now passes the find_ghosts flag through to the 
      ``InterRepository.missing_revision_ids`` call consistently for all
      repository types. This will enable faster missing revision discovery with
      bzr+ssh. (Robert Collins)

    * ``InterRepository.missing_revision_ids`` is now deprecated in favour of
      ``InterRepository.search_missing_revision_ids`` which returns a 